--- a/centering/css_demo.html
+++ b/centering/css_demo.html
@@ -3,9 +3,14 @@
   <head>
     <link type="text/css" rel="stylesheet" href="styles.css"></style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    
+    <style>
+
+    </style>
   </head>
   <body> 
     <div class='header'>
+      Our Company
     </div>
     <div class='red'>
       I'm a red div
